# BaryonForge

./: README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: python-package.yml
BaryonForge/: __init__.py
BaryonForge/Profiles/: Arico20.py  Base.py  Battaglia.py  HOD.py  Mead20.py  Schneider19.py  Schneider25.py  Thermodynamic.py  __init__.py  misc.py
BaryonForge/Runners/: HealpixRunner.py  Map2DRunner.py  SnapshotRunner.py
BaryonForge/utils/: Cache.py  Fourier.py  Pixel.py  Tabulate.py  __init__.py  concentration.py  constants.py  io.py  misc.py
examples/: 01_Plot_Profiles.ipynb  02_Displacement_function.ipynb  03_Pixel_Smoothing.ipynb  04_Baryonify_Density_Shell.ipynb  05_Paint_tSZ_shell.ipynb  06_Change_Adiabatic_Relaxation.ipynb  07_Shocks.ipynb  08_Reproduce_Schneider19.ipynb  11_Plot_Profiles_Arico.ipynb  13_Plot_Profiles_Mead.ipynb  14_HaloModel_Pk.ipynb  15_Plot_Profiles_Schneider25.ipynb  16_Anisotropic_Painting.ipynb  16_Anisotropic_painting_2D.ipynb  17_Secondary_Properties.ipynb  18_BaryonFractions.ipynb  19_Galaxy_HOD.ipynb  20_Cached_Profiles_Speedup.ipynb
tests/: defaults.py  test_CLM_profiles.py  test_healpix.py  test_matter_profiles.py  test_profile_composition.py  test_profiles_dm.py  test_profiles_gas.py  test_profiles_star.py  test_twohalo_profiles.py  text_pixel_conv.py
